--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -36,8 +36,35 @@ html
 
 .main-nav
 {
-    margin-top: 20px;
+    margin-top: 55px;
    float: right;
+   list-style: none;
+    
+}
+
+.main-nav li
+{
+    display: inline-block;
+    margin-right: 50px;
+   
+}
+
+.main-nav li a:link,
+.main-nav li a:visited
+{
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    border-bottom: 1px solid transparent;
+    padding-bottom: 5px;
+}
+
+.main-nav li a:hover,
+.main-nav li a:active
+{
+
+    border-bottom: 1px solid #ff9f43;
+    transition: border-bottom 0.6s;color 0.2s;
 }
 /*END OF MAIN NAVIGATIOn*/
 
@@ -50,12 +77,11 @@ html
 
 header
 {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.71),rgba(0, 0, 0, 0.71)),url(/resources/img/hero.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.71),rgba(0, 0, 0, 0.71)),url(/resources/img/pexels-viktoria-alipatova-2074130.jpg);
     height: 100vh;
     background-size: cover;
     background-position: center;
     opacity: 7.0;
-
 }
 
 h1
