--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -511,8 +511,7 @@ cite img
     width: 90%;
     margin-left: 5%;
     height: 350px;
-    
-    
+      box-shadow: 0 2px 2px rgba(0, 0, 0, 0.64);
 }
 
 .plan-box h3
@@ -524,7 +523,7 @@ cite img
 {
     padding-left: 15%;
     padding-right: 15%;
-   
+  
 }
 
 .plan-box div:first-child
